Mon Apr 29 11:44:14 2002  Owen Taylor  <otaylor@redhat.com>

	* interface.c (file1_menu_uiinfo): GNOMEUIINFO_MENU_EXIT_ITEM
	seems to have been recently deprecated; change to
	QUIT_ITEM, the current name.

2002-03-19  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: reflect change in binary name in gnome_init

	* callbacks.c: delete_event returns a gboolean. May fix the
	crash on exits

	* proctable.c: add some debug spew to catch some of the crashses
	reported

2002-03-06  Zbigniew Chyla  <cyba@gnome.pl>

	* proctable.c (proctable_new): Translate column names.

2002-02-26  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: if the selected process is removed then
	NULL it. Fixes bug #70520

	* infoview.c: set the infoview tab unsensitive if
	the selected process is NULL

2002-02-24  Kevin Vandersloot <kfv101@psu.edu>

	* prettytable.c: add the icon to the hash table always so the icons aren't
	lost when the tree is recreated

2002-02-22  Kjartan Maraas  <kmaraas@gnome.org>

	* procman.c: Remove unsupported #ifdef ENABLE_NLS stuff.
	
2002-02-17  Kevin Vandersloot <kfv101@psu.edu>

	* prettytable.c: don't set the icon on app creation if an icon
	already exist since there was some funny business going on with
	the panel and applets

2002-02-12  Kevin Vandersloot <kfv101@psu.edu>

	* prettytable.c: clean up the icon mess. Icons should now
	get added properly.

	* defaulttable.c: remove gnome-system-monitor from here
	since I'm now able to pick it up properly

	* proctable.c: gdk_pixbuf_unref->g_object_unref

2002-01-30  Kevin Vandersloot <kfv101@psu.edu>

	* defaulttable.h: change procman to gnome-system-monitor
	so that it gets a nice icon :)

2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* gnome-system-monitor.schemas:
	* procman.schemas:

	Rennaming application binaries to match their
	name in the menus in order to reduce user confusion. 
	
2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* defaulttable.h: