@@ -1,3 +1,14 @@
+2002-05-06  Kevin Vandersloot <kfv101@psu.edu>
+
+	* Makefile.am, interface.c: get help working with patch by
+	John Fleck. Fixes bug #80639
+
+2002-04-28 Dennis Cranston <dennis_cranston@yahoo.com>
+
+	* callbacks.c:  add procman.png as the logo for the about 
+	dialog.  change name to match the name in the application
+	menu.
+
 Mon Apr 29 11:44:14 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* interface.c (file1_menu_uiinfo): GNOMEUIINFO_MENU_EXIT_ITEM
